<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
       android:padding="10dp">

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginBottom="15dp"
android:background="@color/grey11"
android:orientation="vertical">

<TextView
    android:id="@+id/textView2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:text="@string/verificacao_de_email"
    android:textColor="@color/GhostWhite"
    android:textSize="20sp" />

</LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="10dp">

<TextView
    android:id="@+id/textView4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/confirma_email"
    android:textAlignment="center"
    android:textSize="16sp" />

<TextView
    android:id="@+id/textViewEMailUsuario"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:text="E-mail"
    android:textAlignment="center"
    android:textColor="@color/grey11"
    android:textSize="20sp" />

<Button
    android:id="@+id/buttonReiviarEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/grey11"
    android:backgroundTint="@color/grey11"
    android:text="@string/reeinviar"
    android:textColor="@color/GhostWhite"
    android:theme="@style/button_custom_black" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:gravity="center"
    android:text="@string/nao_encontrou" />

</LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="bottom|right"
android:orientation="vertical">

    <TextView
        android:id="@+id/textViewCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/cancelar"
        android:textColor="@color/grey11" />
</LinearLayout>

</LinearLayout>