<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey11"
        android:padding="10dp"
        android:text="@string/recuperacao"
        android:textColor="@color/GhostWhite"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insiraseuEmail"
            android:textAlignment="center"
            android:textColor="@color/grey11"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_campo_text"
            android:ems="10"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <Button
            android:id="@+id/buttonConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/confirmar"
            android:textColor="@color/GhostWhite"
            android:theme="@style/button_custom_black" />

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cancelar"
            android:textColor="@color/grey11"
            android:theme="@style/button_custom" />
    </LinearLayout>

</LinearLayout>