<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey11"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/alterar_dados"
            android:textColor="@color/GhostWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView4dd4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/senha"
            android:textColor="@color/grey11"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextSenha2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_campo_text"
            android:drawableLeft="@drawable/ic_lock_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4dd5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/confirmarSenha"
            android:textColor="@color/grey11"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTConfirmarSenha2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_campo_text"
            android:drawableLeft="@drawable/ic_lock_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/buttonCAncelarObservacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:theme="@style/Theme.BergBurgDelivery_custom_amarelo" />

        <Button
            android:id="@+id/buttonConfirmarObservacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/confirmar" />
    </LinearLayout>
</LinearLayout>