<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.PaineliFoodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">
        <include
            android:id="@+id/toolbarPersonalizadaPaine"
            layout="@layout/toolbar" />



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <View
                android:id="@+id/viefswfs2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/Gainsboro" />

            <TextView
                android:id="@+id/textViewsaasd32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|left"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/painel_do_ifood"
                android:textColor="@color/grey11"
                android:textSize="15sp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <Button
                android:id="@+id/buttonCriarPedidoIfood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/vermelho"
                android:padding="10dp"
                android:text="@string/criar_pedido_ifood"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonVerificarFrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/vermelho"
                android:padding="10dp"
                android:text="@string/verificar_frete_ifood"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/buttonConfirmarPedidoIfood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/vermelho"
                android:text="@string/confirmar_Pedido_ifood"
                android:textAllCaps="false"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/buttonCancelarPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/vermelho"
                android:text="@string/cancelar_pedido_ifood"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/buttonAceitarCancelamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/vermelho"
                android:text="@string/aceitar_cancelamento"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonNegaCAncelamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/vermelho"
                android:text="@string/nega_cancelamento"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonBuscarEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/grey11"
            android:drawableRight="@drawable/ic_baseline_sync_24"
            android:padding="10dp"
            android:text="@string/recarregar"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBarIfood"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/vermelho"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/layoutAcompanhamento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <View
                    android:id="@+id/viefswasdfs2"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/Gainsboro" />

                <TextView
                    android:id="@+id/textViewsaadsfsd32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|left"
                    android:background="@color/white"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/acompanharPedido"
                    android:textColor="@color/grey11"
                    android:textSize="15sp" />


            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonAcompanharPedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/vermelho"
                    android:drawableRight="@drawable/ic_baseline_phonelink_24"
                    android:padding="10dp"
                    android:text="@string/acompanhar"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonCopiarLinkPedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/grey11"
                    android:drawableRight="@drawable/ic_baseline_content_copy_24"
                    android:padding="10dp"
                    android:text="@string/copiarLink"
                    android:textAllCaps="false"
                    android:textSize="16sp" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewEventosIfood"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Gainsboro"
        android:paddingTop="5dp"
        tools:listitem="@layout/recycler_view_item" />
</LinearLayout>